--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   grid-column-gap: 10px;
   padding: 10px 0;
-  background-color: rgba(128, 128, 128, 0.3);
+  background-color: rgb(128, 128, 128, 0.3);
 }
 
 button {
@@ -13,22 +13,31 @@ button {
   color: #fff;
   border-radius: 5px;
   padding: 10px 25px;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 500;
   background: transparent;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
-  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5), 7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
   outline: none;
   background: rgb(6, 14, 131);
-  background: linear-gradient(0deg, rgb(6, 14, 131) 0%, rgb(12, 25, 180) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(6, 14, 131, 1) 0%,
+    rgba(12, 25, 180, 1) 100%
+  );
   border: none;
 }
 button:hover {
   background: rgb(0, 3, 255);
-  background: linear-gradient(0deg, rgb(0, 3, 255) 0%, rgb(2, 126, 251) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 3, 255, 1) 0%,
+    rgba(2, 126, 251, 1) 100%
+  );
 }
 
 input {
@@ -40,6 +49,7 @@ input {
   font-size: 16px;
   color: #333;
 }
+
 input:focus {
   outline: none;
   box-shadow: 0 0 5px rgb(0, 3, 255);
@@ -89,4 +99,4 @@ img {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-}/*# sourceMappingURL=search.css.map */
+}
