--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,6 +1,7 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .example {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
   background-color: #fff;
   color: #2f2f37;
@@ -20,7 +21,103 @@
 
 .example .background {
   height: 240px;
-  background-image: url("../images/logo.png");
+  background-image: url('../images/logo.png');
   background-size: cover;
   background-position: center;
-}/*# sourceMappingURL=index.css.map */
+}
+
+.search-form {
+  justify-content: center;
+  display: flex;
+  margin: 0 auto;
+  grid-column-gap: 10px;
+  padding: 10px 0;
+  background-color: rgba(128, 128, 128, 0.3);
+}
+
+button {
+  width: 100px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
+  background: rgb(6, 14, 131);
+  background: linear-gradient(0deg, rgb(6, 14, 131) 0%, rgb(12, 25, 180) 100%);
+  border: none;
+}
+
+button:hover {
+  background: rgb(0, 3, 255);
+  background: linear-gradient(0deg, rgb(0, 3, 255) 0%, rgb(2, 126, 251) 100%);
+}
+
+input {
+  padding: 5px 0;
+  padding-left: 10px;
+  outline: none;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgb(6, 14, 131);
+  font-size: 16px;
+  color: #333;
+}
+
+input:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgb(0, 3, 255);
+  background-color: #fff;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 0;
+}
+
+.load-more {
+  margin: 10px auto;
+  display: block;
+  min-width: 150px;
+}
+
+.is-hidden {
+  display: none;
+}
+
+.gallery {
+  max-width: 1200px;
+  padding: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.photo-card {
+  width: calc((100% - 40px) / 4);
+  align-self: auto;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+} /*# sourceMappingURL=index.css.map */
