--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -115,7 +115,8 @@ img {
 
 .photo-card {
   width: calc((100% - 40px) / 4);
-  align-self: auto;
+  padding: 5px;
+  border: 2px solid rgb(128, 128, 128, 0.3);
 }
 
 .info {
