--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,7 +1,6 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   background-color: #fff;
   color: #2f2f37;
@@ -21,7 +20,7 @@
 
 .example .background {
   height: 240px;
-  background-image: url('../images/logo.png');
+  background-image: url("../images/logo.png");
   background-size: cover;
   background-position: center;
 }
@@ -41,15 +40,14 @@ button {
   color: #fff;
   border-radius: 5px;
   padding: 10px 25px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 500;
   background: transparent;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
-  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
-    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5), 7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
   outline: none;
   background: rgb(6, 14, 131);
   background: linear-gradient(0deg, rgb(6, 14, 131) 0%, rgb(12, 25, 180) 100%);
@@ -107,7 +105,8 @@ img {
 
 .photo-card {
   width: calc((100% - 40px) / 4);
-  align-self: auto;
+  padding: 5px;
+  border: 2px solid rgba(128, 128, 128, 0.3);
 }
 
 .info {
@@ -120,4 +119,4 @@ img {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-} /*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
