--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -49,9 +49,7 @@ button {
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
-  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
-    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
-  outline: none;
+  box-shadow: 0 0 5px rgb(6, 14, 131);
   background: rgb(6, 14, 131);
   background: linear-gradient(
     0deg,
