--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -115,7 +115,8 @@ img {
 .photo-card {
   width: calc((100% - 40px) / 4);
   padding: 5px;
-  border: 2px solid rgb(128, 128, 128, 0.3);
+  background-color: rgb(238, 236, 236);
+  border: 2px solid rgb(128, 128, 128, 0.4);
   border-radius: 5px;
   overflow: hidden;
 }
