--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -106,7 +106,8 @@ img {
 .photo-card {
   width: calc((100% - 40px) / 4);
   padding: 5px;
-  border: 2px solid rgba(128, 128, 128, 0.3);
+  background-color: rgb(238, 236, 236);
+  border: 2px solid rgba(128, 128, 128, 0.4);
   border-radius: 5px;
   overflow: hidden;
 }
